[tool.poetry]
authors = ["James Lowry <jl@balkerne.com>"]
description = ""
name = "detroit"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
placekey = "^0.0.17"
matplotlib = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
