[tool.poetry]
authors = ["James Lowry <jl@balkerne.com>"]
description = ""
name = "detroit"
version = "0.1.0"

[tool.poetry.dependencies]
matplotlib = "^3.8.4"
pandas = "^2.2.2"
placekey = "^0.0.17"
python = "^3.9"
geojson = "^3.1.0"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
